--- a/index.html
+++ b/index.html
@@ -4,9 +4,88 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>WebStudio</title>
 </head>
 <body>
-  <h1>Hey!</h1>  
+    <!-- Header -->
+<header>
+    <div class="company-name">WebStudio</div>
+    <!-- Navigation -->
+    <nav>
+        <ul>
+            <li><a href="/studio" target="">Студия</a></li>
+            <li><a href="/portfolio">Портфолио</a></li>
+            <li><a href="/contacts">Контакты</a></li>
+        </ul>
+         </nav>
+<a href="mailto:info@devstudio.com" class="header-email">info@devstudio.com</a>
+<a href="tel:+380991111111" class="header-tel">+38 099 111 11 11</a>
+</header>
+<!-- Main -->
+<main class="main">
+<h1 class="slogan">эффективные решения для вашего бизнеса</h1>
+<button class="order-button">Заказать услугу</button>
+<!-- Company features -->
+<section class="features">
+<ul>
+    <li class="feature1">
+        <h3 class="feature-name">Внимание к деталям</h3>
+        <p class="feature-text">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
+    </li>
+    <li class="feature2">
+        <h3 class="feature-name">Пунктуальность</h3>
+        <p class="feature-text">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
+    </li>
+    <li class="feature3">
+        <h3 class="feature-name">Планирование</h3>
+        <p class="feature-text">Равным образом консультация с широким активом в значительной степени обуславливает.</p>
+    </li>
+    <li class="feature4">
+        <h3 class="feature-name">Современные технологии</h3>
+        <p class="feature-text">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
+    </li>
+</ul>
+</section>
+<!-- What we do? -->
+<h2 class="">Чем мы занимаемся</h2>
+<ul>
+    <li><img src="images/image1.jpg" alt="image1"></li>
+    <li><img src="images/image2.jpg" alt="image2"></li>
+    <li><img src="images/image3.jpg" alt="image3"></li>
+</ul>
+</div>
+<!-- Our team -->
+<section class="team">
+    <ul>
+        <li>
+            <img src="images/staff/frontend.jpg" alt="Igor Demyanenko">
+            <span class="staff-name">Игорь Демьяненко</span>
+            <span class="staff-position">Product Designer</span>
+        </li>
+        <li>
+            <img src="images/staff/marketing.jpg" alt="Olga Repina">
+                        <span class="staff-name">Ольга Репина</span>
+                        <span class="staff-position">Frontend Developer</span>
+        </li>
+        <li>
+            <img src="images/staff/product_designer.jpg" alt="Nikolay Tarasov">
+                        <span class="staff-name">Николай Тарасов</span>
+                        <span class="staff-position">Marketing</span>
+        </li>
+        <li>
+            <img src="images/staff/UIdesigner.jpg" alt="Mihail Ermakov">
+                        <span class="staff-name">Михаил Ермаков</span>
+                        <span class="staff-position">UI Designer</span>
+        </li>
+    </ul>
+</section>
+</main>
+<!-- Footer -->
+<footer>
+<div class="company-name">WebStudio</div>
+<address class="address">г.Киев, пр-т Леси Украинки, 26</address>
+<a href="mailto:info@example.com" class="footer-contact">info@example.com</a>
+<a href="tel:+380991111111" class="footer-contact">+38 099 111 11 11</a>
+</footer>
 </body>
 </html>
