--- a/index.html
+++ b/index.html
@@ -1,107 +1,110 @@
 <!DOCTYPE html>
 <html lang="ru">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>WebStudio</title>
-  </head>
-  <body>
-    <!-- Header -->
-    <header>
-      <a href="" class="company-name">WebStudio</a>
-      <!-- Navigation -->
-      <nav>
-        <ul>
-          <li><a href="/studio">Студия</a></li>
-          <li><a href="/portfolio">Портфолио</a></li>
-          <li><a href="/contacts">Контакты</a></li>
-        </ul>
-      </nav>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>WebStudio</title>
+</head>
+
+<body>
+  <!-- Header -->
+  <header>
+    <a href="" class="company-name">WebStudio</a>
+    <!-- Navigation -->
+    <nav>
       <ul>
-        <li><a href="mailto:info@devstudio.com" class="header-email">info@devstudio.com</a></li>
-        <li><a href="tel:+380991111111" class="header-tel">+38 099 111 11 11</a></li>
+        <li><a href="/studio">Студия</a></li>
+        <li><a href="/portfolio">Портфолио</a></li>
+        <li><a href="/contacts">Контакты</a></li>
       </ul>
-    </header>
-    <!-- Main -->
-    <main class="main">
-      <section>
-        <h1 class="slogan">эффективные решения для вашего бизнеса</h1>
-        <input type="button" class="order-button" value="Заказать услугу" />
-      </section>
-      <!-- Company features -->
-      <section class="features">
-        <ul>
-          <li class="feature1">
-            <h3 class="feature-name">Внимание к деталям</h3>
-            <p class="feature-text">
-              Идейные соображения, а также начало повседневной работы по формированию позиции.
-            </p>
-          </li>
-          <li class="feature2">
-            <h3 class="feature-name">Пунктуальность</h3>
-            <p class="feature-text">
-              Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
-            </p>
-          </li>
-          <li class="feature3">
-            <h3 class="feature-name">Планирование</h3>
-            <p class="feature-text">
-              Равным образом консультация с широким активом в значительной степени обуславливает.
-            </p>
-          </li>
-          <li class="feature4">
-            <h3 class="feature-name">Современные технологии</h3>
-            <p class="feature-text">
-              Значимость этих проблем настолько очевидна, что реализация плановых заданий.
-            </p>
-          </li>
-        </ul>
-      </section>
-      <!-- What we do? -->
-      <section>
-        <h2 class="">Чем мы занимаемся</h2>
-        <ul>
-          <li><img src="images/image1.jpg" alt="image1" width="370" /></li>
-          <li><img src="images/image2.jpg" alt="image2" width="370" /></li>
-          <li><img src="images/image3.jpg" alt="image3" width="370" /></li>
-        </ul>
-      </section>
-      <!-- Our team -->
-      <section class="team">
-        <h2>Наша команда</h2>
-        <ul>
-          <li>
-            <img src="images/staff/frontend.jpg" alt="Игорь Демьяненко" width="270" />
-            <h3 class="staff-name">Игорь Демьяненко</h3>
-            <p class="staff-position">Product Designer</p>
-          </li>
-          <li>
-            <img src="images/staff/marketing.jpg" alt="Ольга Репина" width="270" />
-            <h3 class="staff-name">Ольга Репина</h3>
-            <p class="staff-position">Frontend Developer</p>
-          </li>
-          <li>
-            <img src="images/staff/product_designer.jpg" alt="Николай Тарасов" width="270" />
-            <h3 class="staff-name">Николай Тарасов</h3>
-            <p class="staff-position">Marketing</p>
-          </li>
-          <li>
-            <img src="images/staff/UIdesigner.jpg" alt="Михаил Ермаков" width="270" />
-            <h3 class="staff-name">Михаил Ермаков</h3>
-            <p class="staff-position">UI Designer</p>
-          </li>
-        </ul>
-      </section>
-    </main>
-    <!-- Footer -->
-    <footer>
-      <a href="" class="company-name">WebStudio</a>
-      <address class="address">
-        <p>г.Киев, пр-т Леси Украинки, 26</p>
-        <a href="mailto:info@example.com" class="footer-contact">info@example.com</a>
-        <a href="tel:+380991111111" class="footer-contact">+38 099 111 11 11</a>
-      </address>
-    </footer>
-  </body>
+    </nav>
+    <ul>
+      <li><a href="mailto:info@devstudio.com" class="header-email">info@devstudio.com</a></li>
+      <li><a href="tel:+380991111111" class="header-tel">+38 099 111 11 11</a></li>
+    </ul>
+  </header>
+  <!-- Main -->
+  <main class="main">
+    <section>
+      <h1 class="slogan">эффективные решения для вашего бизнеса</h1>
+      <button type="button" class="order-button">Заказать услугу</button>
+    </section>
+    <!-- Company features -->
+    <section class="features">
+      <ul>
+        <li class="feature1">
+          <h3 class="feature-name">Внимание к деталям</h3>
+          <p class="feature-text">
+            Идейные соображения, а также начало повседневной работы по формированию позиции.
+          </p>
+        </li>
+        <li class="feature2">
+          <h3 class="feature-name">Пунктуальность</h3>
+          <p class="feature-text">
+            Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
+          </p>
+        </li>
+        <li class="feature3">
+          <h3 class="feature-name">Планирование</h3>
+          <p class="feature-text">
+            Равным образом консультация с широким активом в значительной степени обуславливает.
+          </p>
+        </li>
+        <li class="feature4">
+          <h3 class="feature-name">Современные технологии</h3>
+          <p class="feature-text">
+            Значимость этих проблем настолько очевидна, что реализация плановых заданий.
+          </p>
+        </li>
+      </ul>
+    </section>
+    <!-- What we do? -->
+    <section>
+      <h2 class="">Чем мы занимаемся</h2>
+      <ul>
+        <li><img src="images/image1.jpg" alt="image1" width="370" /></li>
+        <li><img src="images/image2.jpg" alt="image2" width="370" /></li>
+        <li><img src="images/image3.jpg" alt="image3" width="370" /></li>
+      </ul>
+    </section>
+    <!-- Our team -->
+    <section class="team">
+      <h2>Наша команда</h2>
+      <ul>
+        <li>
+          <img src="images/staff/frontend.jpg" alt="Игорь Демьяненко" width="270" />
+          <h3 class="staff-name">Игорь Демьяненко</h3>
+          <p class="staff-position">Product Designer</p>
+        </li>
+        <li>
+          <img src="images/staff/marketing.jpg" alt="Ольга Репина" width="270" />
+          <h3 class="staff-name">Ольга Репина</h3>
+          <p class="staff-position">Frontend Developer</p>
+        </li>
+        <li>
+          <img src="images/staff/product_designer.jpg" alt="Николай Тарасов" width="270" />
+          <h3 class="staff-name">Николай Тарасов</h3>
+          <p class="staff-position">Marketing</p>
+        </li>
+        <li>
+          <img src="images/staff/UIdesigner.jpg" alt="Михаил Ермаков" width="270" />
+          <h3 class="staff-name">Михаил Ермаков</h3>
+          <p class="staff-position">UI Designer</p>
+        </li>
+      </ul>
+    </section>
+  </main>
+  <!-- Footer -->
+  <footer>
+    <a href="" class="company-name">WebStudio</a>
+    <address class="address">
+      <p>г.Киев, пр-т Леси Украинки, 26</p>
+      <a href="mailto:info@example.com" class="footer-contact">info@example.com</a>
+      <a href="tel:+380991111111" class="footer-contact">+38 099 111 11 11</a>
+    </address>
+  </footer>
+</body>
+
 </html>
