--- a/index.html
+++ b/index.html
@@ -5,35 +5,40 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+    rel="stylesheet">
+  <link rel="stylesheet" href="/css/styles.css">
   <title>WebStudio</title>
 </head>
 
 <body>
   <!-- Header -->
-  <header>
-    <a href="" class="company-name">WebStudio</a>
+  <header class="header">
+    <a href="/index.html" class="logo link"><span>Web</span>Studio</a>
     <!-- Navigation -->
-    <nav>
-      <ul>
-        <li><a href="/studio">Студия</a></li>
-        <li><a href="/portfolio">Портфолио</a></li>
-        <li><a href="/contacts">Контакты</a></li>
+    <nav class="header-nav">
+      <ul class="nav list">
+        <li><a href="/index.html" class="nav-link link current">Студия</a></li>
+        <li><a href="/portfolio.html" class="nav-link link">Портфолио</a></li>
+        <li><a href="/contacts.html" class="nav-link link">Контакты</a></li>
       </ul>
     </nav>
-    <ul>
-      <li><a href="mailto:info@devstudio.com" class="header-email">info@devstudio.com</a></li>
-      <li><a href="tel:+380991111111" class="header-tel">+38 099 111 11 11</a></li>
+    <ul class="header-contact list">
+      <li><a href="mailto:info@devstudio.com" class="header-email link">info@devstudio.com</a></li>
+      <li><a href="tel:+380991111111" class="header-tel link">+38 099 111 11 11</a></li>
     </ul>
   </header>
   <!-- Main -->
-  <main class="main">
-    <section>
-      <h1 class="slogan">эффективные решения для вашего бизнеса</h1>
+  <main class="index-main">
+    <section class="index-main-section">
+      <h1 class="main-title">эффективные решения для вашего бизнеса</h1>
       <button type="button" class="order-button">Заказать услугу</button>
     </section>
     <!-- Company features -->
     <section class="features">
-      <ul>
+      <ul class="features-list list">
         <li class="feature1">
           <h3 class="feature-name">Внимание к деталям</h3>
           <p class="feature-text">
@@ -61,18 +66,18 @@
       </ul>
     </section>
     <!-- What we do? -->
-    <section>
-      <h2 class="">Чем мы занимаемся</h2>
-      <ul>
+    <section class="work-section">
+      <h2 class="work-title">Чем мы занимаемся</h2>
+      <ul class="work-list list">
         <li><img src="images/image1.jpg" alt="image1" width="370" /></li>
         <li><img src="images/image2.jpg" alt="image2" width="370" /></li>
         <li><img src="images/image3.jpg" alt="image3" width="370" /></li>
       </ul>
     </section>
     <!-- Our team -->
-    <section class="team">
-      <h2>Наша команда</h2>
-      <ul>
+    <section class="staff-section">
+      <h2 class="staff-title">Наша команда</h2>
+      <ul class="staff-list list">
         <li>
           <img src="images/staff/frontend.jpg" alt="Игорь Демьяненко" width="270" />
           <h3 class="staff-name">Игорь Демьяненко</h3>
@@ -97,12 +102,16 @@
     </section>
   </main>
   <!-- Footer -->
-  <footer>
-    <a href="" class="company-name">WebStudio</a>
+  <footer class="footer">
+    <a href="/index.html" class="logo link"><span>Web</span>Studio</a>
     <address class="address">
-      <p>г.Киев, пр-т Леси Украинки, 26</p>
-      <a href="mailto:info@example.com" class="footer-contact">info@example.com</a>
-      <a href="tel:+380991111111" class="footer-contact">+38 099 111 11 11</a>
+      <ul class="footer-contact-list list">
+        <li><a
+            href="https://www.google.com/maps/place/%D0%B1%D1%83%D0%BB.+%D0%9B%D0%B5%D1%81%D0%B8+%D0%A3%D0%BA%D1%80%D0%B0%D0%B8%D0%BD%D0%BA%D0%B8,+26,+%D0%9A%D0%B8%D0%B5%D0%B2,+02000/@50.4265807,30.5361971,17z/data=!3m1!4b1!4m5!3m4!1s0x40d4cf0e033ecbe9:0x57a4dffefec77da0!8m2!3d50.4265807!4d30.5383858 "
+            class="contact-address link">г.Киев, пр-т Леси Украинки, 26</a></li>
+        <li><a href="mailto:info@example.com" class="footer-email">info@example.com</a></li>
+        <li><a href="tel:+380991111111" class="footer-tel">+38 099 111 11 11</a></li>
+      </ul>
     </address>
   </footer>
 </body>
