--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
 <body>
   <!-- Header -->
   <header class="header">
-    <a href="/index.html" class="logo link"><span>Web</span>Studio</a>
+    <a href="./index.html" class="logo link"><span>Web</span>Studio</a>
     <!-- Navigation -->
     <nav class="header-nav">
       <ul class="nav list">
-        <li><a href="/index.html" class="nav-link link current">Студия</a></li>
-        <li><a href="/portfolio.html" class="nav-link link">Портфолио</a></li>
-        <li><a href="/contacts.html" class="nav-link link">Контакты</a></li>
+        <li><a href="./index.html" class="nav-link link current">Студия</a></li>
+        <li><a href="./portfolio.html" class="nav-link link">Портфолио</a></li>
+        <li><a href="./contacts.html" class="nav-link link">Контакты</a></li>
       </ul>
     </nav>
     <ul class="header-contact list">
@@ -103,7 +103,7 @@
   </main>
   <!-- Footer -->
   <footer class="footer">
-    <a href="/index.html" class="logo link"><span>Web</span>Studio</a>
+    <a href="./index.html" class="logo link"><span>Web</span>Studio</a>
     <address class="address">
       <ul class="footer-contact-list list">
         <li><a
