--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
   <!-- Header -->
   <header class="header">
-    <a href="./index.html" class="logo link"><span>Web</span>Studio</a>
+    <a href="./index.html" class="header-logo link"><span>Web</span>Studio</a>
     <!-- Navigation -->
     <nav class="header-nav">
       <ul class="nav list">
@@ -103,7 +103,7 @@
   </main>
   <!-- Footer -->
   <footer class="footer">
-    <a href="./index.html" class="logo link"><span>Web</span>Studio</a>
+    <a href="./index.html" class="footer-logo link"><span>Web</span>Studio</a>
     <address class="address">
       <ul class="footer-contact-list list">
         <li><a
