--- a/portfolio.html
+++ b/portfolio.html
@@ -18,7 +18,7 @@
 <body>
     <!-- Header -->
     <header class="header">
-        <a href="./index.html" class="logo link"><span>Web</span>Studio</a>
+        <a href="./index.html" class="header-logo link"><span>Web</span>Studio</a>
         <!-- Navigation -->
         <nav class="header-nav">
             <ul class="nav list">
@@ -101,7 +101,7 @@
     </main>
     <!-- Footer -->
     <footer class="footer">
-        <a href="./index.html" class="logo link"><span>Web</span>Studio</a>
+        <a href="./index.html" class="footer-logo link"><span>Web</span>Studio</a>
         <address class="address">
             <ul class="footer-contact-list list">
                 <li><a href="https://www.google.com/maps/place/%D0%B1%D1%83%D0%BB.+%D0%9B%D0%B5%D1%81%D0%B8+%D0%A3%D0%BA%D1%80%D0%B0%D0%B8%D0%BD%D0%BA%D0%B8,+26,+%D0%9A%D0%B8%D0%B5%D0%B2,+02000/@50.4265807,30.5361971,17z/data=!3m1!4b1!4m5!3m4!1s0x40d4cf0e033ecbe9:0x57a4dffefec77da0!8m2!3d50.4265807!4d30.5383858 "
