--- a/portfolio.html
+++ b/portfolio.html
@@ -32,8 +32,16 @@
                 </ul>
             </nav>
             <ul class="header-contact list">
-                <li><a href="mailto:info@devstudio.com" class="header-email link">info@devstudio.com</a></li>
-                <li><a href="tel:+380991111111" class="header-tel link">+38 099 111 11 11</a></li>
+                <li>
+                    <a href="mailto:info@devstudio.com" class="header-email link">
+                        <svg class="header-contact-icon" width="16" height="12">
+                            <use href="./images/sprites/icons.svg#icon-envelope"></use>
+                        </svg>info@devstudio.com</a>
+                </li>
+                <li><a href="tel:+380991111111" class="header-tel link">
+                        <svg class="header-contact-icon" width="10" height="16">
+                            <use href="./images/sprites/icons.svg#icon-smartphone"></use>
+                        </svg>+38 099 111 11 11</a></li>
             </ul>
         </div>
     </header>
@@ -53,69 +61,86 @@
                 <h1 class="visually-hidden">Портфолио проектов</h1>
                 <ul class="project-list list">
                     <li class="project-card">
-                        <img src="./images/portfolio/technokryak.jpg" alt="Веб-сайт Технокряк">
-                        <div class="project-description">
-                            <h2 class="project-name">Технокряк</h2>
-                            <p class="project-type">Веб-сайт</p>
-                        </div>
+                        <a href="" class="project-card-link link">
+                            <img src="./images/portfolio/technokryak.jpg" alt="Веб-сайт Технокряк">
+                            <div class="project-description">
+                                <h2 class="project-name">Технокряк</h2>
+                                <p class="project-type">Веб-сайт</p>
+                            </div>
+                        </a>
+                    </li>
+                    <li class="project-card">
+                        <a href="" class="project-card-link link">
+                            <img src="./images/portfolio/poster.jpg" alt="Постер New Orlean vs Golden Star">
+                            <div class="project-description">
+                                <h2 class="project-name">Постер New Orlean vs Golden Star</h2>
+                                <p class="project-type">Дизайн</p>
+                            </div>
+                        </a>
+                    </li>
+                    <li class="project-card">
+                        <a href="" class="project-card-link link">
+                            <img src="./images/portfolio/seafood_restaurant.jpg" alt="Ресторан Seafood">
+                            <div class="project-description">
+                                <h2 class="project-name">Ресторан Seafood</h2>
+                                <p class="project-type">Приложение</p>
+                            </div>
+                        </a>
+                    </li>
+                    <li class="project-card">
+                        <a href="" class="project-card-link link">
+                            <img src="./images/portfolio/prime.jpg" alt="Проект Prime">
+                            <div class="project-description">
+                                <h2 class="project-name">Проект Prime</h2>
+                                <p class="project-type">Маркетинг</p>
+                            </div>
+                        </a>
+                    </li>
+                    <li class="project-card">
+                        <a href="" class="project-card-link link">
+                            <img src="./images/portfolio/boxes.jpg" alt="Проект Boxes">
+                            <div class="project-description">
+                                <h2 class="project-name">Проект Boxes</h2>
+                                <p class="project-type">Приложение</p>
+                            </div>
+                        </a>
+                    </li>
+                    <li class="project-card">
+                        <a href="" class="project-card-link link">
+                            <img src="./images/portfolio/inspiration_borders.jpg" alt="Дисплей">
+                            <div class="project-description">
+                                <h2 class="project-name">Inspiration has no Borders</h2>
+                                <p class="project-type">Веб-сайт</p>
+                            </div>
+                        </a>
+                    </li>
 
+                    <li class="project-card">
+                        <a href="" class="project-card-link link">
+                            <img src="./images/portfolio/limited_edition.jpg" alt="Книга">
+                            <div class="project-description">
+                                <h2 class="project-name">Издание Limited Edition</h2>
+                                <p class="project-type">Дизайн</p>
+                            </div>
+                        </a>
                     </li>
                     <li class="project-card">
-                        <img src="./images/portfolio/poster.jpg" alt="Постер New Orlean vs Golden Star">
-                        <div class="project-description">
-                            <h2 class="project-name">Постер New Orlean vs Golden Star</h2>
-                            <p class="project-type">Дизайн</p>
-                        </div>
+                        <a href="" class="project-card-link link">
+                            <img src="./images/portfolio/lab.jpg" alt="Проект LAB">
+                            <div class="project-description">
+                                <h2 class="project-name">Проект LAB</h2>
+                                <p class="project-type">Маркетинг</p>
+                            </div>
+                        </a>
                     </li>
                     <li class="project-card">
-                        <img src="./images/portfolio/seafood_restaurant.jpg" alt="Ресторан Seafood">
-                        <div class="project-description">
-                            <h2 class="project-name">Ресторан Seafood</h2>
-                            <p class="project-type">Приложение</p>
-                        </div>
-                    </li>
-                    <li class="project-card">
-                        <img src="./images/portfolio/prime.jpg" alt="Проект Prime">
-                        <div class="project-description">
-                            <h2 class="project-name">Проект Prime</h2>
-                            <p class="project-type">Маркетинг</p>
-                        </div>
-                    </li>
-                    <li class="project-card">
-                        <img src="./images/portfolio/boxes.jpg" alt="Проект Boxes">
-                        <div class="project-description">
-                            <h2 class="project-name">Проект Boxes</h2>
-                            <p class="project-type">Приложение</p>
-                        </div>
-                    </li>
-                    <li class="project-card">
-                        <img src="./images/portfolio/inspiration_borders.jpg" alt="Дисплей">
-                        <div class="project-description">
-                            <h2 class="project-name">Inspiration has no Borders</h2>
-                            <p class="project-type">Веб-сайт</p>
-                        </div>
-                    </li>
-
-                    <li class="project-card">
-                        <img src="./images/portfolio/limited_edition.jpg" alt="Книга">
-                        <div class="project-description">
-                            <h2 class="project-name">Издание Limited Edition</h2>
-                            <p class="project-type">Дизайн</p>
-                        </div>
-                    </li>
-                    <li class="project-card">
-                        <img src="./images/portfolio/lab.jpg" alt="Проект LAB">
-                        <div class="project-description">
-                            <h2 class="project-name">Проект LAB</h2>
-                            <p class="project-type">Маркетинг</p>
-                        </div>
-                    </li>
-                    <li class="project-card">
-                        <img src="./images/portfolio/growing_business.jpg" alt="Развивающийся бизнес">
-                        <div class="project-description">
-                            <h2 class="project-name">Growing Business</h2>
-                            <p class="project-type">Приложение</p>
-                        </div>
+                        <a href="" class="project-card-link link">
+                            <img src="./images/portfolio/growing_business.jpg" alt="Развивающийся бизнес">
+                            <div class="project-description">
+                                <h2 class="project-name">Growing Business</h2>
+                                <p class="project-type">Приложение</p>
+                            </div>
+                        </a>
                     </li>
                 </ul>
             </div>
@@ -124,15 +149,60 @@
     <!-- Footer -->
     <footer class="footer">
         <div class="footer-container container">
-            <a href="./index.html" class="footer-logo link"><span>Web</span>Studio</a>
-            <address class="address">
-                <ul class="footer-contact-list list">
-                    <li><a href="https://www.google.com/maps/place/%D0%B1%D1%83%D0%BB.+%D0%9B%D0%B5%D1%81%D0%B8+%D0%A3%D0%BA%D1%80%D0%B0%D0%B8%D0%BD%D0%BA%D0%B8,+26,+%D0%9A%D0%B8%D0%B5%D0%B2,+02000/@50.4265807,30.5361971,17z/data=!3m1!4b1!4m5!3m4!1s0x40d4cf0e033ecbe9:0x57a4dffefec77da0!8m2!3d50.4265807!4d30.5383858 "
-                            class="contact-address link">г.Киев, пр-т Леси Украинки, 26</a></li>
-                    <li><a href="mailto:info@example.com" class="footer-email">info@example.com</a></li>
-                    <li><a href="tel:+380991111111" class="footer-tel">+38 099 111 11 11</a></li>
+            <div class="footer-address-container">
+                <a href="./index.html" class="footer-logo link">
+                    <span>Web</span>
+                    Studio
+                </a>
+                <address class="address">
+                    <ul class="footer-contact-list list">
+                        <li class="footer-contact-item">
+                            <a href="https://www.google.com/maps/place/%D0%B1%D1%83%D0%BB.+%D0%9B%D0%B5%D1%81%D0%B8+%D0%A3%D0%BA%D1%80%D0%B0%D0%B8%D0%BD%D0%BA%D0%B8,+26,+%D0%9A%D0%B8%D0%B5%D0%B2,+02000/@50.4265807,30.5361971,17z/data=!3m1!4b1!4m5!3m4!1s0x40d4cf0e033ecbe9:0x57a4dffefec77da0!8m2!3d50.4265807!4d30.5383858 "
+                                class="contact-address link">
+                                г.Киев, пр-т Леси Украинки, 26
+                            </a>
+                        </li>
+                        <li class="footer-contact-item">
+                            <a href="mailto:info@example.com" class="footer-email">info@example.com</a>
+                        </li>
+                        <li class="footer-contact-item"><a href="tel:+380991111111" class="footer-tel">+38 099 111 11
+                                11</a></li>
+                    </ul>
+                </address>
+            </div>
+            <div class="footer-soc-container">
+                <h3 class="footer-social-name">Приєднуйтесь</h3>
+                <ul class="footer-soc-list list">
+                    <li class="footer-soc-item">
+                        <a href="" class="footer-soc-link link">
+                            <svg class="footer-soc-icon" width="20" height="20">
+                                <use href="./images/sprites/icons.svg#icon-instagram"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="footer-soc-item">
+                        <a href="" class="footer-soc-link link">
+                            <svg class="footer-soc-icon" width="20" height="20">
+                                <use href="./images/sprites/icons.svg#icon-twitter"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="footer-soc-item">
+                        <a href="" class="footer-soc-link link">
+                            <svg class="footer-soc-icon" width="20" height="20">
+                                <use href="./images/sprites/icons.svg#icon-facebook"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="footer-soc-item">
+                        <a href="" class="footer-soc-link link">
+                            <svg class="footer-soc-icon" width="20" height="20">
+                                <use href="./images/sprites/icons.svg#icon-linkedin"></use>
+                            </svg>
+                        </a>
+                    </li>
                 </ul>
-            </address>
+            </div>
         </div>
     </footer>
 </body>
