--- a/index.html
+++ b/index.html
@@ -275,37 +275,37 @@
         <h2 class="clients-title">Постійні клієнти</h2>
         <ul class="clients-list list">
           <li class="clients-item">
-            <a href="clients-link link">
+            <a href="" class="clients-link link">
               <svg class="clients-icon" width="106" height="60">
                 <use href="./images/sprites/icons.svg#icon-logo_client1"></use>
               </svg></a>
           </li>
           <li class="clients-item">
-            <a href="clients-link link">
+            <a href="" class="clients-link link">
               <svg class="clients-icon" width="106" height="60">
                 <use href="./images/sprites/icons.svg#icon-logo_client2"></use>
               </svg></a>
           </li>
           <li class="clients-item">
-            <a href="clients-link link">
+            <a href="" class="clients-link link">
               <svg class="clients-icon" width="106" height="60">
                 <use href="./images/sprites/icons.svg#icon-logo_client3"></use>
               </svg></a>
           </li>
           <li class="clients-item">
-            <a href="clients-link link">
+            <a href="" class="clients-link link">
               <svg class="clients-icon" width="106" height="60">
                 <use href="./images/sprites/icons.svg#icon-logo_client4"></use>
               </svg></a>
           </li>
           <li class="clients-item">
-            <a href="clients-link link">
+            <a href="" class="clients-link link">
               <svg class="clients-icon" width="106" height="60">
                 <use href="./images/sprites/icons.svg#icon-logo_client5"></use>
               </svg></a>
           </li>
           <li class="clients-item">
-            <a href="clients-link link">
+            <a href="" class="clients-link link">
               <svg class="clients-icon" width="106" height="60">
                 <use href="./images/sprites/icons.svg#icon-logo_client6"></use>
               </svg></a>
